# sandbox-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build-image.yml
deploy/: oneclick.sh  sandbox-mcp.service
images/: Dockerfile.base
src/sandbox_mcp/: __init__.py  __main__.py  auth.py  config.py  files.py  jobs.py  sandboxes.py  server.py  state.py  util.py
tests/: check_init.py  e2e_client.py
