[project]
name = "sandbox-mcp"
version = "0.1.0"
description = "A self-hosted MCP server that gives an AI assistant managed Docker sandboxes: command execution, background jobs and large-file transfer."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.0",
    "docker>=7.0.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
]

[project.scripts]
sandbox-mcp = "sandbox_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandbox_mcp"]
